--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  min-height: 100vh;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  column-gap: 5rem;
+  width: 50%;
+  padding: 5vw 10vw;
+  border-radius: 3rem;
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+}
+
+.question {
+  width: 320px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+span {
+  font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.questionText p {
+  font-size: 1.2rem;
+}
+
+.answer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  width: 30vw;
+}
+
+button {
+  padding: .7rem;
+  border-radius: 1rem;
+  border: none;
+  text-align: start;
+  background-image: linear-gradient(to right,  #4ca1af, #2c3e50);
+}
+
+@media (max-width:768px) {
+  .card {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .question {
+    width: unset;
+  }
+
+  .answer {
+    width: 100%;
   }
 }
