set questions and answers

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,32 @@ section {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  position: relative;
+}
+
+.NB {
+  position: absolute;
+  top: 24%;
+  font-weight: 600;
+  color: red;
+}
+
+.scoreSection {
+  width: 50%;
+  padding: 5vw 10vw;
+  border-radius: 3rem;
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+}
+
+.scoreSection p {
+  text-align: center;
+  font-size: 3rem;
+  color: white;
+}
+
+.note {
+  font-size: 1.2rem;
+  font-weight: 900;
 }
 
 .card {
@@ -37,14 +63,30 @@ span {
 }
 
 button {
-  padding: .7rem;
+  padding: 0.7rem;
   border-radius: 1rem;
   border: none;
   text-align: start;
-  background-image: linear-gradient(to right,  #4ca1af, #2c3e50);
+  background-image: linear-gradient(to right, #4ca1af, #2c3e50);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
-@media (max-width:768px) {
+button:hover {
+  transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+  section {
+    min-height: 90vh;
+  }
+
+  .NB {
+    width: 90%;
+    margin: 0 auto;
+    top: 95%;
+  }
+
   .card {
     flex-direction: column;
   }
